<resources>
    <string name="app_name">SWords</string>
    <string name="statistics_words_count">Слов составлено:\u0020</string>
    <string name="statistics_words_unique_count">Уникальных слов составлено:\u0020</string>
    <string name="statistics_most_frequent_word">Слово, составляемое чаще всего:\u0020</string>
    <string name="statistics_day_word_count">За последние 24 часа слов составлено:\u0020</string>
    <string name="statistics_word_longest">Самое длинное составленное слово:\u0020</string>
    <string name="statistics_word_average_length">Средняя длина составленного слова:\u0020</string>
    <string name="statistics_time_in_game">Время, проведённое в игре:\u0020</string>

    <string name="statistics_profile_words_count">Слов\nсоставлено:</string>
    <string name="statistics_profile_words_unique_count">Уникальных слов\nсоставлено:</string>
    <string name="statistics_profile_most_frequent_word">Любимое\nслово:</string>
    <string name="statistics_profile_word_longest">Самое длинное\nслово:</string>
    <string name="statistics_profile_word_average_length">Средняя\nдлина слова:</string>
    <string name="status_online">В сети</string>
    <string name="enter_nickname_with_greeting">Добро пожаловать в SWords!\n Введите свой игровой ник. Под этим ником Вас будут видеть другие игроки</string>
    <string name="enter_nickname_without_greeting">Введите свой игровой ник. Под этим ником Вас будут видеть другие игроки</string>
    <string name="daily_reward_dialog_title">Ежедневная награда: день <b>%1$d</b> из <b>%2$d</b></string>
    <string name="spin">Вращать колесо</string>
    <string name="bonus_duration"><b>Длительность:</b> %1$s</string>
    <string name="bonus_price"><b>Цена:</b> %1$d</string>
    <string name="bonus_count"><i><b>У Вас:</b></i> %1$d</string>
    <string name="use">Использовать</string>
    <string name="plus">+</string>
    <string name="bonuses">Бонусы</string>
    <string name="bonus_purchase_confirmation_dialog_title">Подтверждение покупки</string>
    <string name="bonus_purchase_confirmation_dialog_message">Вы точно хотите купить этот бонус?</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>


    <string-array name="themes">
        <item>Стандартная</item>
        <item>Тёмная</item>
        <item>Белая</item>
        <item>Тёмно-синяя</item>
        <item>Весенняя</item>
    </string-array>

    <string-array name="days">
        <item>День 1</item>
        <item>День 2</item>
        <item>День 3</item>
        <item>День 4</item>
        <item>День 5</item>
    </string-array>

    <plurals name="word">
        <item quantity="one">слово</item>
        <item quantity="few">слова</item>
        <item quantity="many">слов</item>
        <item quantity="other">слов</item>
    </plurals>

    <plurals name="time">
        <item quantity="one">раз</item>
        <item quantity="few">раза</item>
        <item quantity="many">раз</item>
        <item quantity="other">раз</item>
    </plurals>

    <plurals name="hour">
        <item quantity="one">час</item>
        <item quantity="few">часа</item>
        <item quantity="many">часов</item>
        <item quantity="other">часов</item>
    </plurals>

    <plurals name="minute">
        <item quantity="one">минута</item>
        <item quantity="few">минуты</item>
        <item quantity="many">минут</item>
        <item quantity="other">минут</item>
    </plurals>
</resources>