<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.statistics.StatisticsActivity">

    <ImageButton
        android:id="@+id/goBackButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:background="@drawable/image_button_selector"
        android:onClick="goBack"
        android:paddingHorizontal="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_left_arrow" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:gravity="center"
        android:paddingEnd="50dp"
        android:text="0"
        android:textColor="?scoreAndHintsText"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/scoreImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:src="@drawable/score"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hints"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="2dp"
        android:gravity="center"
        android:paddingEnd="50dp"
        android:text="0"
        android:textColor="?scoreAndHintsText"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoreImage" />

    <ImageView
        android:id="@+id/hintsImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="2dp"
        android:src="@drawable/hints"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoreImage" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Статистика"
        android:textColor="?wordText"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            android:paddingBottom="100dp">

            <LinearLayout
                app:layout_constraintTop_toBottomOf="@id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="15dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="?buttonBackground">
                    <TextView
                        android:padding="10dp"
                        android:id="@+id/wordCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:text="@string/statistics_words_count"
                        android:textColor="?scoreAndHintsText"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="15dp"
                    app:cardBackgroundColor="?buttonBackground"
                    android:layout_gravity="center">
                    <TextView
                        android:padding="10dp"
                        android:id="@+id/uniqueWordCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:text="@string/statistics_words_unique_count"
                        android:textColor="?scoreAndHintsText"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="15dp"
                    app:cardBackgroundColor="?buttonBackground"
                    android:layout_gravity="center">
                    <TextView
                        android:padding="10dp"
                        android:id="@+id/todayWordCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:text="@string/statistics_day_word_count"
                        android:textColor="?scoreAndHintsText"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="15dp"
                    app:cardBackgroundColor="?buttonBackground"
                    android:layout_gravity="center">
                    <TextView
                        android:padding="10dp"
                        android:id="@+id/wordOften"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/statistics_most_frequent_word"
                        android:textAlignment="center"
                        android:textColor="?scoreAndHintsText"
                        android:textSize="20sp"
                        android:layout_marginVertical="10dp"
                        />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="15dp"
                    app:cardBackgroundColor="?buttonBackground"
                    android:layout_gravity="center">
                    <TextView
                        android:padding="10dp"
                        android:id="@+id/wordLongest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:text="@string/statistics_word_longest"
                        android:textAlignment="center"
                        android:textColor="?scoreAndHintsText"
                        android:textSize="20sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="15dp"
                    app:cardBackgroundColor="?buttonBackground"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_margin="10dp"
                        android:id="@+id/wordAverageLength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:text="@string/statistics_word_average_length"
                        android:textAlignment="center"
                        android:textColor="?scoreAndHintsText"
                        android:textSize="20sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="15dp"
                    app:cardBackgroundColor="?buttonBackground"
                    android:layout_gravity="center">
                    <TextView
                        android:padding="10dp"
                        android:id="@+id/timeInGame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:text="@string/statistics_time_in_game"
                        android:textAlignment="center"
                        android:textColor="?scoreAndHintsText"
                        android:textSize="20sp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>